# zetasql-sample

./: .gitmodules  CMakeLists.txt  README.md  find_orphan_so.sh  install_zetasql.sh  install_zetasql_mac.sh
.github/workflows/: build.yml
